; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/comctl32/extr_listview.c_lstrncmpiW.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/comctl32/extr_listview.c_lstrncmpiW.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LOCALE_USER_DEFAULT = common dso_local global i32 0, align 4
@NORM_IGNORECASE = common dso_local global i32 0, align 4
@CSTR_EQUAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @lstrncmpiW to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lstrncmpiW(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @lstrlenW(i32 %8)
  %10 = call i32 @min(i32 %7, i32 %9)
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @lstrlenW(i32 %11)
  %13 = call i32 @min(i32 %10, i32 %12)
  store i32 %13, i32* %6, align 4
  %14 = load i32, i32* @LOCALE_USER_DEFAULT, align 4
  %15 = load i32, i32* @NORM_IGNORECASE, align 4
  %16 = load i32, i32* %4, align 4
  %17 = load i32, i32* %6, align 4
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @CompareStringW(i32 %14, i32 %15, i32 %16, i32 %17, i32 %18, i32 %19)
  %21 = load i32, i32* @CSTR_EQUAL, align 4
  %22 = sub nsw i32 %20, %21
  ret i32 %22
}

declare dso_local i32 @min(i32, i32) #1

declare dso_local i32 @lstrlenW(i32) #1

declare dso_local i32 @CompareStringW(i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
